<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            android:background="@color/toolbar_bg"
            app:titleTextColor="@color/white"
            app:title="@string/toolbar_tittle" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_name"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_phone"
                android:inputType="number"
                tools:ignore="Autofill,TextFields" />

            <RadioGroup
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_cheese1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_cheese1" />

                <RadioButton
                    android:id="@+id/radio_cheese2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_cheese2" />

                <RadioButton
                    android:id="@+id/radio_cheese3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_cheese3" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_shape1" />

                <RadioButton
                    android:id="@+id/round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_shape2" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/pepperoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox1" />

                <CheckBox
                    android:id="@+id/mushroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox2" />

                <CheckBox
                    android:id="@+id/veggies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox3" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_ordering"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_btn" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sms_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_btn" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>
