<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_bg"
            app:layout_collapseMode="pin"
            app:title="@string/toolbar_tittle"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TableRow>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/placeholder_name"
                    tools:ignore="Autofill,TextFields" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/placeholder_phone"
                    android:inputType="number"
                    tools:ignore="Autofill,TextFields" />
            </TableRow>

            <TableRow>

                <RadioGroup
                    android:id="@+id/cheese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_cheese1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_cheese1" />

                    <RadioButton
                        android:id="@+id/radio_cheese2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_cheese2" />

                    <RadioButton
                        android:id="@+id/radio_cheese3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_cheese3" />
                </RadioGroup>
            </TableRow>

            <TableRow>

                <RadioGroup
                    android:id="@+id/shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/square"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_shape1" />

                    <RadioButton
                        android:id="@+id/round"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_shape2" />
                </RadioGroup>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/pepperoni"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox1" />

                    <CheckBox
                        android:id="@+id/mushroom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox2" />

                    <CheckBox
                        android:id="@+id/veggies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox3" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/placeholder_ordering"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="20dp">

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </com.google.android.material.card.MaterialCardView>
            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_btn" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sms_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_btn" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</TableLayout>
